# moirai

./: .clangd  .gitignore  CMakeLists.txt  README.md  moirai-dwh-export.service  moirai-dwh-export.timer  moirai-pgo-train.service  moirai-retention.service  moirai-retention.timer  moirai.conf  moirai.service
.cache/clangd/index/: format.hxx.0C365EA548271053.idx  main.cxx.71C2E3812890DD9B.idx  moirai.cxx.CD524962E91CBBAD.idx  moirai.hxx.8FBD3C936C113FC5.idx  version.hxx.84F3B03F45F594CB.idx
.github/workflows/: cmake.yml  codeql-analysis.yml
atropos/: .eslintrc.json  .gitignore  package.json  tsconfig.json
atropos/.vim/: coc-settings.json
benchmarks/: solver_benchmarks.cxx
build.old/: outputs.json  outputs.pretty.json  outputs.redone.json
clotho/: .gitignore  CMakeLists.txt  perf.data  perf.data.old  test.perf
clotho/include/: config.hxx.in  enumerate.hxx  format.hxx  graph_helpers.hxx  recorder.hxx  search_writer.hxx  transportation.hxx  typedefs.hxx
clotho/include/clotho/: context.hxx  typedefs.hxx
clotho/include/clotho/common/: event.hxx  event_consumer.hxx  event_queue.hxx  metrics.hxx  processor.hxx  record.hxx  utils.hxx
clotho/include/clotho/consumer/: consumer.hxx  kafka.hxx
clotho/include/clotho/graph/: context.hxx  earliest.hxx  labeled_graph.hxx  strategy.hxx  typedefs.hxx
clotho/include/clotho/kafka/: cluster_config.hxx  consumer.hxx  producer.hxx  utils.hxx
clotho/include/clotho/producer/: producer.hxx
clotho/include/clotho/producer/kafka/: producer.hxx
clotho/include/graph/: earliest.hxx  solver.hxx  structures.hxx
clotho/include/reader/: reader.hxx
clotho/include/utils/: application.hxx  component.hxx
clotho/src/: clotho.cxx  event.cxx  file_reader.cxx  graph_helpers.cxx  parser.cxx  record.cxx  server_local.cxx  solver.cxx  solver_wrapper.cxx  transportation.cxx  typedefs.cxx
clotho/src/common/: utils.cxx
clotho/src/consumer/: consumer.cxx
clotho/src/graph/: context.cxx  earliest.cxx  solver.cxx  strategy.cxx  structures.cxx  typedefs.cxx
clotho/src/kafka/: cluster_config.cxx  consumer.cxx  producer.cxx
clotho/src/reader/: reader.cxx
clotho/src/utils/: application.cxx  component.cxx
clotho/tools/: results_to_csv.py
cmake/: FindRdKafkaCPP.cmake  GetVersionFromGit.cmake  patch_simdjson.py
conf/: Dockerfile  elasticsearch.yml
data/: fixtures.tar.bz2.gpg
docs/: developer.md  dwh-kafka-schema.md  modules.md  real-route-fixtures.md  runtime.md  user.md
fixtures/: 4169899.csv  centers.json  centers.pretty.json  dz.json  dz.pretty.json  outputs.json  response.csv  routes.minimal.json  routes.staging.json  routes.staging.utc.json  test_one.json  tests.csv  tests.json  tests.pretty.json  tests.staging.json
iface/: CMakeLists.txt
iface/include/moirai/: d_heap.hxx  moirai.hxx  priority_queue.hxx  property.hxx  property_maps.hxx
iface/include/moirai/containers/: concepts.hxx  containers.hxx  d_heap.hxx  iterator.hxx  priority_queue.hxx
iface/include/moirai/detail/: container.hxx
iface/include/moirai/graph/: concepts.hxx  d_heap.hxx  property_map_concepts.hxx  property_maps.hxx  utils.hxx  visitors.hxx
include/: CMakeLists.txt  app.hxx  base64.hxx  blocking_queue.hxx  blocking_queue_fwd.hxx  cluster_config.hxx  concepts.hxx  concurrent_cache.hxx  console_writer.hxx  consumer.hxx  consumer_console.hxx  consumer_search.hxx  date_utils.hxx  dijkstra.hpp  edge.hxx  edge_cost_attributes.hxx  enumerate.hxx  file_reader.hxx  format.hxx  generator.hxx  graph.hxx  graph_helpers.hxx  hash.hxx  http.hxx  json_utils.hxx  kafka_reader.hxx  optimal.hxx  pairwise_iterator.hxx  path_writer.hxx  processor.hxx  producer.hxx  producer_api.hxx  producer_faas.hxx  producer_file.hxx  producer_kafka.hxx  producer_thanos.hxx  recorder.hxx  route_schedule.hxx  runnable.hxx  scan_reader.hxx  (+12 more)
include/bgl/: direction.hxx  edge.hxx  graph.hxx
include/boost/: dijkstra_shortest_paths.hpp  relax.hpp
include/containers/: fibonacci_heap.hxx  fibonacci_heap.old.hxx
include/graph/: adjacency_list.hxx  algorithm.hxx  graph.hxx  property_map.hxx
include/moirai/: format.hxx  moirai.hxx  version.hxx
include/nlohmann/: json.hpp
include/solvers/: dijkstra.hxx  fastest_forward.hxx  latest_forward.hxx
include/streams/: kafka.hxx  kafka_utils.hxx
include/transportation/: graph_helpers.hxx  helpers.hxx  network_ownership.hxx
lib/: CMakeLists.txt  moirai.cxx
modules/: moirai.app.cxx  moirai.date_utils.cxx  moirai.file_reader.cxx  moirai.http.cxx  moirai.json_utils.cxx  moirai.kafka_reader.cxx  moirai.processor.cxx  moirai.route_schedule.cxx  moirai.scan_reader.cxx  moirai.search_document.cxx  moirai.search_writer.cxx  moirai.server.cxx  moirai.solver.cxx  moirai.solver_wrapper.cxx  moirai.transportation.cxx  moirai.utils.cxx
src/: console_writer.cxx  consumer.cxx  consumer_console.cxx  consumer_search.cxx  date.cxx  date_utils.cxx  edge.cxx  edge_cost_attributes.cxx  file_reader.cxx  graph.cxx  graph_helpers.cxx  hash.cxx  http.cxx  kafka_reader.cxx  main.cxx  moirai.cxx  moiraiv2.cxx  optimal.cxx  parser.cxx  processor.cxx  producer.cxx  producer_api.cxx  producer_faas.cxx  producer_file.cxx  producer_kafka.cxx  producer_thanos.cxx  queue.cxx  runnable.cxx  scan_reader.cxx  search_writer.cxx  server.cxx  server.cxx.old  server_local.cxx  solver.cxx  solver_wrapper.cxx  transport_center.cxx  transport_edge.cxx  transportation.cxx  utils.cxx  wrapper.cxx
src/graph/: graph.cxx
src/solvers/: fastest_forward.cxx
src/streams/: kafka.cxx
src/transportation/: graph_helpers.cxx
stack/: .eslintignore
tests/: init_tests.cxx  logger_tests.cxx  module_smoke.cxx  processor_tests.cxx  run_tests.cxx  schedule_tests.cxx  search_writer_tests.cxx  solver_tests.cxx  test_helpers.hxx  wrapper_tests.cxx
tests/fixtures/: facilities_page1.json  facilities_page2.json  load_normal.json  load_with_items.json  real_routes.json  routes.json  timings.json
tools/: assess_instance_sizing.py  autoconvert.py  capture_load_fixture.py  export_audit_to_parquet.py  fetch_facility_fixture.sh  fetch_route_fixture.sh  verify.sh
(+22 files in other folders)
